Fix wedding background on ios.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 16px;
   }
 
   header {
@@ -806,26 +807,16 @@
     text-align: center;
     background-position: center 0px;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    background-size: 100%;
   }
 
   @media (max-width: 1600px) {
     .wedding {
-    background-size: initial;
-      /*background-size: 1600px auto;*/
+      background-size: initial;
     }
   }
-/*
-  @media (max-width: 1300px) {
-    .wedding {
-      background-size: 2000px auto;
-    }
-  }
-*/
+
   .wedding h2 {
-    /*color: white;*/
-    /*padding: 0;*/
     margin-top: 6rem;
     margin-bottom: 0rem;
     font-size: 3rem;
